gnome-shell (3.26.0-0ubuntu2) UNRELEASED; urgency=medium

  * fix typo in comment for ubuntu.css

 -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Sep 2017 11:57:56 +0200

gnome-shell (3.26.0-0ubuntu1) artful; urgency=medium

  * New upstream release
  * Dep on newer mutter.

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 15 Sep 2017 07:51:56 +0200

gnome-shell (3.25.91-0ubuntu5) artful; urgency=medium

  Changes for ubuntu session:
  * 71_smarter_alt_tab.patch
    - quick alt-tab (without showing up the switcher) switch only between
      the last window of the last 2 applications to be focused instead of
      raising all windows of those apps. (LP: #1716921)
  * 72_consistent_alt_key_above_tab_behavior.patch:
    - ensure alt + key above tab, when the switcher is opened, focus the first
      window and not directly the second one of an application. This is
      relevant as the select window part of the switcher is only raising the
      selected window, not the whole application. (LP: #1716872)

 -- Didier Roche <didrocks@ubuntu.com>  Tue, 12 Sep 2017 09:40:45 +0200

gnome-shell (3.25.91-0ubuntu4) artful; urgency=medium

  [ Jeremy Soller ]
  * Change path of gdm3 stylesheet (LP: #1715722)
  * Add alternatives for gdm3 stylesheet, setting ubuntu.css as the default

  [ Didier Roche ]
  * debian/gnome-shell-common.install:
    Install upstream theme for gdm if vanilla gnome theme is selected.

 -- Jeremy Soller <jeremy@system76.com>  Fri, 08 Sep 2017 10:12:58 -0600

gnome-shell (3.25.91-0ubuntu3) artful; urgency=medium

  * Ship new ubuntu css theme enabled in the ubuntu session.
    We don't generate is from a regexp list or patch as it has complex
    data structure (removal of some parts of stenzas, same source color
    mapping to different destination colors depending as corresponding
    to different elements).
    Right now, we prefer to do a 3-way merge of the theme and look working
    upstream for better theming support.