@@ -1,6 +1,7 @@
 gnome-shell (3.26.0-0ubuntu2) UNRELEASED; urgency=medium
 
   * fix typo in comment for ubuntu.css
+  * Make St checkbox orange instead of blue, as other icons in our theme.
 
  -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Sep 2017 11:57:56 +0200
 
